# echidna

./: .gitignore  CHANGELOG.md  CLAUDE.md  CLEANUP_PLAN.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md
.github/workflows/: ci.yml  publish.yml  specs.yml
benches/: advanced.rs  bytecode.rs  comparison.rs  diffop.rs  forward.rs  gpu.rs  reverse.rs  stde.rs  taylor.rs
echidna-optim/: Cargo.toml
echidna-optim/src/: convergence.rs  implicit.rs  lib.rs  linalg.rs  piggyback.rs  result.rs  sparse_implicit.rs
echidna-optim/src/solvers/: lbfgs.rs  newton.rs  trust_region.rs
echidna-optim/tests/: phase6_robustness.rs  phase8_solvers.rs  piggyback.rs  solvers.rs  sparse_implicit.rs  ws4_diagnostics.rs  ws7_error_variants.rs
specs/: README.md  verify_anchors.sh
specs/revolve/: BinomialBeta.tla  HintAllocation.cfg  HintAllocation.tla  Revolve.cfg  Revolve.tla  RevolveOnline.cfg  RevolveOnline.tla
specs/tape_optimizer/: Idempotency.cfg  Idempotency.tla  TapeOptimizer.cfg  TapeOptimizer.tla
src/: api.rs  checkpoint.rs  cross_country.rs  diffop.rs  dual.rs  dual_vec.rs  faer_support.rs  float.rs  laurent.rs  lib.rs  nalgebra_support.rs  ndarray_support.rs  nonsmooth.rs  opcode.rs  sparse.rs  tape.rs  taylor.rs  taylor_dyn.rs  taylor_ops.rs
src/bytecode_tape/: forward.rs  jacobian.rs  mod.rs  optimize.rs  parallel.rs  reverse.rs  serde_support.rs  sparse.rs  tangent.rs  taylor.rs  thread_local.rs
src/gpu/: cuda_backend.rs  mod.rs  stde_gpu.rs  taylor_codegen.rs  wgpu_backend.rs
src/gpu/kernels/: tape_eval.cu
src/gpu/shaders/: forward.wgsl  reverse.wgsl  tangent_forward.wgsl  tangent_reverse.wgsl
src/kernels/: mod.rs
src/stde/: higher_order.rs  laplacian.rs  mod.rs  pde.rs  pipeline.rs  types.rs
src/traits/: breverse_num_traits.rs  breverse_ops.rs  dual_vec_ops.rs  laurent_num_traits.rs  laurent_std_ops.rs  num_traits_impls.rs  simba_impls.rs  std_ops.rs  taylor_std_ops.rs
tests/: bug_hunt_regressions.rs  composed_nesting.rs  correctness.rs  custom_primitives.rs  diffop.rs  gpu_cuda_kernel_parity.rs  gpu_cuda_tests.rs  gpu_stde.rs  gpu_wgpu_tests.rs  laurent.rs  nalgebra_integration.rs  nonsmooth.rs  numerical_robustness.rs  phase6_api_robustness.rs  phase7_gpu_fixes.rs  phase7_gpu_parity.rs  phase8_misc.rs  phase8_opcode.rs  phase8_taylor_laurent.rs  powf_negative_base.rs  regressions.rs  reverse_mode.rs  serde.rs  sparse_jacobian.rs  spec_invariants_checkpoint.rs  spec_invariants_tape_optimize.rs  stde_core.rs  stde_dense.rs  stde_higher_order.rs  stde_pipeline.rs  stde_stats.rs  structural_asserts.rs  tape_optimization.rs
