[package]
name = "echidna-optim"
version = "0.8.2"
edition = "2021"
rust-version = "1.93"
description = "Optimization solvers and implicit differentiation for echidna"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Entrolution/echidna"
documentation = "https://docs.rs/echidna-optim"
readme = "README.md"
keywords = ["optimization", "differentiation", "implicit", "gradient", "scientific"]
categories = ["mathematics", "science", "algorithms"]

[dependencies]
echidna = { version = "0.8.2", path = "..", features = ["bytecode"] }
num-traits = "0.2"
faer = { version = "0.24", optional = true }

[dev-dependencies]
approx = "0.5"

[features]
default = []
parallel = ["echidna/parallel"]
sparse-implicit = ["dep:faer"]
